2002-05-29  David Byers  <david.byers@swipnet.se>

        * NEWS-0.47: Updated to this point in history in preparation for
	next BETA release.

	* user-hooks.el (kom-list-summary-hook-conf-list): Added * to
	front of docstring.
	(kom-read-last-text-hook-conf-list): Same.

	Fix bug 503:
	* commands2.el (kom-apropos): New function.
	(lyskom-apropos-insert): New function.
	(lyskom-apropos-insert-docstring): New function.

	* view-mode.el (lyskom-view-mode-map): Bind = to
	kom-menu-button-press, as in other modes.

2002-05-28  David Byers  <david.byers@swipnet.se>

	* help-compile.el (lyskom-help-parse-string): Fixed search for end
	tag so it doesn't cause a stack overflow in the 20.7 regexp
	mathcher.

2002-05-27  David Byers  <david.byers@swipnet.se>

	* commands2.el (kom-change-language): Show which language we just
	set.

	Fix bug 491:
	* swedish-strings.el (lyskom-messages): Use downcase in
	language-set-to.

	* lyskom-rest.el (lyskom-format-aux-help): Added support for
	downcasing from the format string.
	(lyskom-format-aux): Same.
	(lyskom-format-format): Added _ as downcase flag.

	* check-strings.el: Added checking of matching sections for all
	languages in new help.

	* help.en: New file.

	* vars.el.in: Removed lyskom-help-categories.

	* swedish-strings.el: Removed help strings.

	* commands2.el: Removed old help-related-commands.

	New help system:
	* help.el (lyskom-help-format-h1): Updated newline handling
	(lyskom-help-format-h2): Same
	(lyskom-help-format-h3): Same
	(lyskom-help-format-cref): No newline after reference.

2002-05-26  David Byers  <david.byers@swipnet.se>

	New help system:
	* help-compile.el: New file.

	* help.el: New file.

	* help.sv: New file.

	* vars.el.in (lyskom-help-data): New variable.
	(lyskom-maybe-setq-default): Removed eval since eval will be done
	after macro expansion.
	(lyskom-maybe-setq): Same here.

	* swedish-strings.el (sv): Load swedish help strings.

	* Makefile (SOURCES): Added help.el.
