@@ -1,3 +1,2 @@
-NEWS-0.46
-NEWS-0.46.1
+NEWS-0.47
 README 
